--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 
         <!-- 数据迁移模块 -->
         <module>kernel-s-migration</module>
+        <module>kernel-d-openapi</module>
 
     </modules>
 
@@ -155,6 +156,7 @@
         <openfeign.version>2.2.6.RELEASE</openfeign.version>
         <seata.all.version>1.3.0</seata.all.version>
         <bcprov.version>1.68</bcprov.version>
+        <springdoc.version>1.6.12</springdoc.version>
     </properties>
 
     <dependencyManagement>
@@ -326,6 +328,13 @@
                 <groupId>com.gettyio</groupId>
                 <artifactId>getty-expansion</artifactId>
                 <version>${getty.version}</version>
+            </dependency>
+
+            <!-- openapi接口文档 -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-webmvc-core</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
 
         </dependencies>
