【7.6.0】【框架改造】【auth】【jwt】减小jwt的职责，jwt模块保持独立

--- a/kernel-d-socket/socket-business-websocket/pom.xml
+++ b/kernel-d-socket/socket-business-websocket/pom.xml
@@ -37,7 +37,7 @@
         <!--jwt模块的sdk-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>jwt-sdk</artifactId>
+            <artifactId>auth-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
     </dependencies>
