--- a/kernel-d-db/db-api/pom.xml
+++ b/kernel-d-db/db-api/pom.xml
@@ -17,6 +17,14 @@
 
     <dependencies>
 
+        <!--config模块的api-->
+        <!--数据源配置Expander要放到容器里-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>config-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!-- mybatis-plus dao框架 -->
         <!-- 基础实体，分页参数和结果的创建，需要用到mp的注解和类 -->
         <dependency>
@@ -36,14 +44,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-        </dependency>
-
-        <!--config模块的api-->
-        <!--数据源配置要放到容器里-->
-        <dependency>
-            <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>config-api</artifactId>
-            <version>${roses.version}</version>
         </dependency>
 
     </dependencies>
