--- a/kernel-d-file/file-spring-boot-starter/pom.xml
+++ b/kernel-d-file/file-spring-boot-starter/pom.xml
@@ -31,6 +31,13 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--系统配置-自动装配-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>config-spring-boot-starter-memory</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
