--- a/kernel-d-auth/auth-api/pom.xml
+++ b/kernel-d-auth/auth-api/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
 
         <!--web-->
-        <!--ResourcePersistenceApi会用到web，用在提供feign接口时-->
+        <!--LoginUserRemoteApi会用到web，用在提供feign接口时-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
