【7.6.0】【框架改造】更新跨域的模块名

--- a/kernel-d-security/security-sdk-allow-cors/pom.xml
+++ b/kernel-d-security/security-sdk-allow-cors/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>security-sdk-cors</artifactId>
+    <artifactId>security-sdk-allow-cors</artifactId>
 
     <packaging>jar</packaging>
 
