--- a/kernel-d-security/pom.xml
+++ b/kernel-d-security/pom.xml
@@ -19,7 +19,7 @@
         <module>security-api</module>
         <module>security-sdk-captcha</module>
         <module>security-sdk-clear-threadlocal</module>
-        <module>security-sdk-cors</module>
+        <module>security-sdk-allow-cors</module>
         <module>security-sdk-count</module>
         <module>security-sdk-xss</module>
         <module>security-sdk-request-encrypt-and-decode</module>
