--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
         <!--字典业务模块-->
         <module>kernel-s-dict</module>
 
+        <!--字段拓展业务-->
+        <module>kernel-s-expand</module>
+
         <!--分组业务-->
         <module>kernel-s-group</module>
 
