--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
         <module>kernel-s-stat</module>
 
         <!--系统管理基础业务-->
+        <module>kernel-s-sys</module>
         <module>kernel-s-system</module>
 
     </modules>
