【7.6.0】【sys】【org】更新组织机构crud接口

--- a/kernel-s-sys/sys-business-hr/pom.xml
+++ b/kernel-s-sys/sys-business-hr/pom.xml
@@ -46,6 +46,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--参数校验模块的api-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>validator-api-table-unique</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
