--- a/kernel-s-sys/sys-business-hr/pom.xml
+++ b/kernel-s-sys/sys-business-hr/pom.xml
@@ -24,6 +24,14 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--字典的api-->
+        <!--获取审批人类型查询-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>dict-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--资源api模块-->
         <!--用在资源控制器，资源扫描上-->
         <dependency>
