--- a/kernel-s-sys/sys-business-hr/pom.xml
+++ b/kernel-s-sys/sys-business-hr/pom.xml
@@ -40,6 +40,14 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--数据库便捷操作api-->
+        <!--查询组织机构的子公司的子公司-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>db-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--资源api模块-->
         <!--用在资源控制器，资源扫描上-->
         <dependency>
