--- a/kernel-s-sys/sys-business-permission/pom.xml
+++ b/kernel-s-sys/sys-business-permission/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
 
+        <!--参数校验模块的api-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>validator-api-table-unique</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--文件api-->
         <!--应用图片相关的操作-->
         <dependency>
