--- a/kernel-s-message/message-api/pom.xml
+++ b/kernel-s-message/message-api/pom.xml
@@ -47,7 +47,7 @@
         <!--用来做id转化-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>system-api</artifactId>
+            <artifactId>sys-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
