--- a/kernel-s-expand/expand-business/pom.xml
+++ b/kernel-s-expand/expand-business/pom.xml
@@ -28,7 +28,7 @@
         <!--调用用户相关业务-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>system-api</artifactId>
+            <artifactId>sys-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
