--- a/kernel-d-timer/timer-business/pom.xml
+++ b/kernel-d-timer/timer-business/pom.xml
@@ -44,7 +44,7 @@
         <!--查询用户-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>system-api</artifactId>
+            <artifactId>sys-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
