--- a/kernel-s-message/message-sdk-db/pom.xml
+++ b/kernel-s-message/message-sdk-db/pom.xml
@@ -33,7 +33,7 @@
         <!--发送消息需要用到用户相关的接口-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>system-api</artifactId>
+            <artifactId>sys-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
