【7.6.0】【sys】【permission】整理包结构，初始化用户首页详细信息

--- a/kernel-s-sys/sys-business-permission/pom.xml
+++ b/kernel-s-sys/sys-business-permission/pom.xml
@@ -26,6 +26,7 @@
 
         <!--文件api-->
         <!--应用图片相关的操作-->
+        <!--获取登录用户的头像url拼接-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
             <artifactId>file-api</artifactId>
