--- a/kernel-d-wrapper/wrapper-field-sdk/pom.xml
+++ b/kernel-d-wrapper/wrapper-field-sdk/pom.xml
@@ -24,6 +24,14 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--字典模块的api-->
+        <!--新增加了一个字典编码的转化-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>dict-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--jackson相关基础依赖-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
