【8.0】【dict】单独抽出行政区域模块

--- a/kernel-s-dict/pom.xml
+++ b/kernel-s-dict/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>dict-api</module>
         <module>dict-business</module>
+        <module>dict-city-business</module>
         <module>dict-spring-boot-starter</module>
     </modules>
 
