--- a/kernel-s-dict/dict-spring-boot-starter/pom.xml
+++ b/kernel-s-dict/dict-spring-boot-starter/pom.xml
@@ -24,6 +24,13 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--城市的字典业务-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>dict-city-business</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
