【8.0】【system】更新sys-api的名称

--- a/kernel-d-auth/auth-sdk/pom.xml
+++ b/kernel-d-auth/auth-sdk/pom.xml
@@ -67,7 +67,7 @@
         <!--登录和鉴权需要用到用户相关的接口-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>sys-api</artifactId>
+            <artifactId>system-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
