--- a/kernel-d-file/file-business/pom.xml
+++ b/kernel-d-file/file-business/pom.xml
@@ -27,7 +27,7 @@
         <!--格式化用户id展示姓名使用-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>sys-api</artifactId>
+            <artifactId>system-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
