--- a/kernel-d-log/log-api/pom.xml
+++ b/kernel-d-log/log-api/pom.xml
@@ -21,7 +21,7 @@
         <!--用来获取userId的包装转化-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>sys-api</artifactId>
+            <artifactId>system-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
