--- a/kernel-d-sms/sms-business-validation/pom.xml
+++ b/kernel-d-sms/sms-business-validation/pom.xml
@@ -20,7 +20,7 @@
         <!--系统管理的api-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>sys-api</artifactId>
+            <artifactId>system-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
