--- a/kernel-s-system/sys-business-hr/pom.xml
+++ b/kernel-s-system/sys-business-hr/pom.xml
@@ -20,7 +20,7 @@
         <!--基础核心业务api-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
-            <artifactId>sys-api</artifactId>
+            <artifactId>system-api</artifactId>
             <version>${roses.version}</version>
         </dependency>
 
