--- a/kernel-s-system/system-api/pom.xml
+++ b/kernel-s-system/system-api/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>sys-api</artifactId>
+    <artifactId>system-api</artifactId>
 
     <packaging>jar</packaging>
 
