【8.0】【system】更新sys-business-hr的名称

--- a/kernel-s-system/system-business-hr/pom.xml
+++ b/kernel-s-system/system-business-hr/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>sys-business-hr</artifactId>
+    <artifactId>system-business-hr</artifactId>
 
     <packaging>jar</packaging>
 
