--- a/kernel-s-system/pom.xml
+++ b/kernel-s-system/pom.xml
@@ -17,7 +17,7 @@
 
     <modules>
         <module>system-api</module>
-        <module>sys-business-hr</module>
+        <module>system-business-hr</module>
         <module>sys-business-permission</module>
         <module>sys-business-portal</module>
         <module>sys-spring-boot-starter</module>
