【8.0】【system】更新sys-business-portal的名称

--- a/kernel-s-system/pom.xml
+++ b/kernel-s-system/pom.xml
@@ -19,7 +19,7 @@
         <module>system-api</module>
         <module>system-business-hr</module>
         <module>system-business-permission</module>
-        <module>sys-business-portal</module>
+        <module>system-business-portal</module>
         <module>sys-spring-boot-starter</module>
     </modules>
 
