【8.0】【system】更新sys-starter的名称

--- a/kernel-s-system/pom.xml
+++ b/kernel-s-system/pom.xml
@@ -20,7 +20,7 @@
         <module>system-business-hr</module>
         <module>system-business-permission</module>
         <module>system-business-portal</module>
-        <module>sys-spring-boot-starter</module>
+        <module>system-spring-boot-starter</module>
     </modules>
 
     <dependencies>
