--- a/kernel-s-system/system-spring-boot-starter/pom.xml
+++ b/kernel-s-system/system-spring-boot-starter/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>sys-spring-boot-starter</artifactId>
+    <artifactId>system-spring-boot-starter</artifactId>
 
     <packaging>jar</packaging>
 
