【8.0】【event】初始化event模块

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
         <!--邮件发送模块-->
         <module>kernel-d-email</module>
 
+        <!--业务事件模块-->
+        <module>kernel-d-event</module>
+
         <!--文件操作模块-->
         <module>kernel-d-file</module>
 
