--- a/kernel-s-system/system-business-hr/pom.xml
+++ b/kernel-s-system/system-business-hr/pom.xml
@@ -17,6 +17,12 @@
 
     <dependencies>
 
+        <!-- 事件模块 -->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>event-spring-boot-starter</artifactId>
+        </dependency>
+
         <!--基础核心业务api-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
