【8.0】【org】更新新增org的监听

--- a/kernel-s-system/system-business-hr/pom.xml
+++ b/kernel-s-system/system-business-hr/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
             <artifactId>event-spring-boot-starter</artifactId>
+            <version>${roses.version}</version>
         </dependency>
 
         <!--基础核心业务api-->
