--- a/kernel-s-system/system-api/pom.xml
+++ b/kernel-s-system/system-api/pom.xml
@@ -40,6 +40,17 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!--web-->
+        <!--UserInfoRemoteApi会用到web，用在提供feign接口时-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
