【8.0】【log】初始化业务日志模块

--- a/kernel-d-log/pom.xml
+++ b/kernel-d-log/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>log-api</module>
+        <module>log-business</module>
         <module>log-business-login-log</module>
         <module>log-business-requestapi</module>
         <module>log-spring-boot-starter</module>
