--- a/kernel-s-system/system-business-hr/pom.xml
+++ b/kernel-s-system/system-business-hr/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
 
+        <!-- 多数据源模块，获取数据源上下文 -->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>ds-container-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!-- 事件模块 -->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
