【8.0.4】【fav模块】更新模块引用

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,9 @@
         <!--系统管理基础业务-->
         <module>kernel-s-system</module>
 
+        <!--用户收藏模块-->
+        <module>kernel-s-user-favorite</module>
+
     </modules>
 
     <properties>
