【8.0.4】【sys】更新生成拖拽图的接口

--- a/kernel-s-system/system-business-permission/pom.xml
+++ b/kernel-s-system/system-business-permission/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
 
+        <!--获取拖拽验证码图片-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>security-api</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--日志相关api-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
